<resources>
    <string name="app_name">SecondProject</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_music">Music</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_events">Events</string>
    <string name="menu_messages">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_fragment">Finish Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="navigate_to_finish">Navigate to finish</string>
    <string name="musics_fragment">Musics Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="shops_fragment">Shops Fragment</string>

</resources>