<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/messages_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_message_24"
        android:title="@string/menu_messages" />
    <item
        android:id="@+id/musics_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_audiotrack_24"
        android:title="@string/menu_music" />
    <item
        android:id="@+id/shops_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_shop_24"
        android:title="@string/menu_shop" />
    <item
        android:id="@+id/settings_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/menu_settings" />


</menu>